fixed content width. added wrapped post

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -80,7 +80,7 @@ div#page{
  }
 
  .content{
-    max-width:35em;
+    width:35em;
     margin: 0 2em;
  }
 
